<resources>
    <string name="app_name">Know Your Government</string>
    <string name="app_info">info</string>
    <string name="search_location">location</string>
    <string name="power_by">Powered By</string>
    <string name="api"><u>Google Civic Information API</u></string>
    <string name="copyright">"\u00a9 2019, Deepak Kumar Yadav</string>
    <string name="version">Version 1.0</string>
    <string name="no_data">No Data For Location</string>
    <string name="address">Address: </string>
    <string name="phone">Phone: </string>
    <string name="email">Email: </string>
    <string name="websites">Website: </string>
</resources>
