<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfficialActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OfficialActivity">

        <TextView
            android:id="@+id/locationDisplay"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:text="@string/no_data"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:text="U.S Senator"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationDisplay" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:text="Tammy Duckworth"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/office" />

        <TextView
            android:id="@+id/party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:text="(Democratic Party)"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <ImageView
            android:id="@+id/officialPhoto"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:onClick="photoActivity"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/party"
            app:srcCompat="@drawable/placeholder" />

        <ImageView
            android:id="@+id/partyLogo"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginTop="175dp"
            android:onClick="partyWebsite"
            app:layout_constraintBottom_toBottomOf="@+id/officialPhoto"
            app:layout_constraintEnd_toEndOf="@+id/officialPhoto"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/officialPhoto"
            app:layout_constraintTop_toBottomOf="@+id/party"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/dem_logo" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="37dp"
            android:text="@string/address"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/officialPhoto" />

        <TextView
            android:id="@+id/addressText"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="36dp"
            android:text="The quick brown fox jumped over the "
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/officialPhoto" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="62dp"
            android:text="@string/phone"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressText" />

        <TextView
            android:id="@+id/email"
            android:layout_width="69dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="41dp"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="28dp"
            android:text="Text Box "
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneText" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="53dp"
            android:text="@string/websites"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/webURL"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:onClick="facebookClicked"
            android:src="@drawable/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:onClick="twitterClicked"
            android:src="@drawable/twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website"
            app:layout_constraintVertical_bias="0.023" />

        <ImageView
            android:id="@+id/googlePlus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="216dp"
            android:layout_marginLeft="216dp"
            android:layout_marginTop="50dp"
            android:onClick="googlePlusClicked"
            android:src="@drawable/googleplus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/youtube"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="292dp"
            android:layout_marginLeft="292dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:onClick="youTubeClicked"
            android:src="@drawable/youtube"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/officialPhoto"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website"
            app:layout_constraintVertical_bias="0.166" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>